tests/files/flow_controller_tests/should_run/072.cmdr
x = 45;
print tan(x);