tests/files/flow_controller_tests/should_fail/047.cmdr
x = "cat";
print tan(x);